--- a/src/scss/custom-style.scss
+++ b/src/scss/custom-style.scss
@@ -9,6 +9,12 @@ $yellow : #ffce57;
     background: $ea;
 }
 
+.blog-home {
+    margin-top: 15px;
+    margin-bottom: 50px;
+    padding: 30px;
+}
+
 #back-top {
     background-color: $pink;
     color: white;
@@ -19,9 +25,14 @@ $yellow : #ffce57;
     text-align: center;
 }
 .page-template-page_home_event-php .home-upcoming-events {
-    padding-bottom: 140px;
+    padding-bottom: 40px;
 }
 .tribe-events-list {
+
+    .type-tribe_events {
+        padding-bottom: 90px !important;
+    }
+
     .event-list-wrapper-top {
         height: 220px;
 
@@ -29,15 +40,17 @@ $yellow : #ffce57;
             height: 220px;
         }
     }
+
     .event-list-wrapper-bottom {
         .wraper-bottom-left {
             padding: 30px;
             background: white;
         }
+
         .wraper-bottom-right {
             width: 100%;
             height: 60px;
-            top: 150px;
+            top: 140px;
             text-align: right;
             padding-right: 30px;
 
@@ -58,6 +71,10 @@ $yellow : #ffce57;
                 display: none;
             }
         }
+
+        a.more-link .cost {
+            text-transform: none;
+        }
     }
 
     //category colors
@@ -66,7 +83,7 @@ $yellow : #ffce57;
             background: green;
         }
     }
-}
+} //.tribe-events-list
 
 //category colors
 .home-slider-events {
@@ -91,3 +108,5 @@ $yellow : #ffce57;
 .home-subscribe-form {
     background-color: $yellow;
 }
+
+@import "media";
