--- a/src/scss/custom-style.scss
+++ b/src/scss/custom-style.scss
@@ -23,6 +23,10 @@ $yellow : #ffce57;
     margin-top: 15px;
     margin-bottom: 50px;
     padding: 30px;
+
+    .post-summary {
+        padding-left: 30px;
+    }
 }
 
 #back-top {
@@ -45,13 +49,10 @@ $yellow : #ffce57;
 
     .event-list-wrapper-top {
         height: 220px;
-
-        .tribe-events-event-image img {
-            height: 220px;
-        }
     }
 
     .event-list-wrapper-bottom {
+
         .wraper-bottom-left {
             padding: 30px;
             background: white;
