--- a/src/scss/media.scss
+++ b/src/scss/media.scss
@@ -19,6 +19,10 @@ $screen-xs-max:              ($screen-xs - 1) !default;
     .page-template-page_home_event-php .home-upcoming-events {
         padding-bottom: 0;
     }
+
+    .blog-home .post-summary {
+        padding-left: 0px;
+    }
 }
 
 @media (max-width: $screen-xs-max) {
