--- a/src/scss/custom-style.scss
+++ b/src/scss/custom-style.scss
@@ -91,7 +91,7 @@ $yellow : #ffce57;
     //category colors
     .tribe-events-category-gardening {
         .tribe-events-event-date, .event-list-wrapper-bottom .wraper-bottom-right {
-            background: green;
+            background: rgba(255,255,255,0.8);
         }
     }
 } //.tribe-events-list
