--- a/src/scss/custom-style.scss
+++ b/src/scss/custom-style.scss
@@ -61,7 +61,7 @@ $yellow : #ffce57;
         .wraper-bottom-right {
             width: 100%;
             height: 60px;
-            top: 140px;
+            top: 160px;
             text-align: right;
             padding-right: 30px;
 
@@ -74,7 +74,7 @@ $yellow : #ffce57;
                 }
 
                 .cost {
-                    padding-top: 0;
+                    padding-top: 1px!important;
                 }
             }
 
@@ -89,22 +89,91 @@ $yellow : #ffce57;
     }
 
     //category colors
-    .tribe-events-category-gardening {
+    .tribe-events-category-markiblon {
         .tribe-events-event-date, .event-list-wrapper-bottom .wraper-bottom-right {
-            background: rgba(255,255,255,0.8);
+            background: rgba(217,69,84,0.9);
+        }
+    }
+    
+      .tribe-events-category-sapikejut {
+        .tribe-events-event-date, .event-list-wrapper-bottom .wraper-bottom-right {
+            background: rgba(242,185,64,0.9);
+        }
+    }
+    
+       .tribe-events-category-makbalap {
+        .tribe-events-event-date, .event-list-wrapper-bottom .wraper-bottom-right {
+            background: rgba(150,152,154,0.9);
+        }
+    }
+    
+       .tribe-events-category-abidin {
+        .tribe-events-event-date, .event-list-wrapper-bottom .wraper-bottom-right {
+            background: rgba(58,173,215,0.9);
+        }
+    }
+    
+           .tribe-events-category-babinsa {
+        .tribe-events-event-date, .event-list-wrapper-bottom .wraper-bottom-right {
+            background: rgba(82,132,196,0.9);
+        }
+    }
+    
+     .tribe-events-category-mantili {
+        .tribe-events-event-date, .event-list-wrapper-bottom .wraper-bottom-right {
+            background: rgba(146,114,92,0.9);
+        }
+    }
+    
+    .tribe-events-category-simanis {
+        .tribe-events-event-date, .event-list-wrapper-bottom .wraper-bottom-right {
+            background: rgba(212,112,169,0.9);
         }
     }
 } //.tribe-events-list
 
 //category colors
 .home-slider-events {
-    .tribe-events-category-gardening {
-        background: green;
+	.slide-event-title {
+		line-height:30px;
+	}
+    .tribe-events-category-markiblon {
+        background: rgba(217,69,84,0.9);
     }
+        .tribe-events-category-sapikejut {
+        background: rgba(242,185,64,0.9);
+    }
+            .tribe-events-category-makbalap {
+        background: rgba(150,152,154,0.9);
+    }
+    .tribe-events-category-abidin {
+        background: rgba(58,173,215,0.9);
+    }
+     .tribe-events-category-babinsa {
+        background: rgba(82,132,196,0.9);
+    }
+      .tribe-events-category-mantili {
+        background: rgba(146,114,92,0.9);
+    }
+    .tribe-events-category-simanis {
+        background: rgba(212,112,169,0.9);
+    }
+}
+
+.single-tribe_events #tribe-events-content form.cart, .single-tribe_events #tribe-events-content div.cart {
+background-color: rgb(242,185,64);
 }
 
 .blog-list .post-inner .post-summary {
     height: 4.6em;
+}
+
+.blog-single .post-summary .post-title {
+	font-size:22px;
+	line-height:28px;
+	text-transform: uppercase;
+	margin: -1px 0 15px 0;
+	color: #2e3e40;
 }
 
 .page-template-page_home_event-php .home-upcoming-events {
@@ -119,5 +188,14 @@ $yellow : #ffce57;
 .home-subscribe-form {
     background-color: $yellow;
 }
+
+table.tribe-events-tickets {
+	td {
+		border-top: 1px solid #fff;
+	}
+	.tickets_price {
+	color: #
+	}
+} 
 
 @import "media";
