--- a/src/scss/custom-style.scss
+++ b/src/scss/custom-style.scss
@@ -44,8 +44,9 @@ $yellow : #ffce57;
 
 .tribe-events-list {
 
+    .tribe-events-event-date {width:100px;}
     .type-tribe_events {
-        padding-bottom: 90px !important;
+        padding-bottom: 100px !important;
     }
 
     .event-list-wrapper-top {
@@ -57,6 +58,13 @@ $yellow : #ffce57;
         .wraper-bottom-left {
             padding: 30px;
             background: white;
+            height: 160px;
+            max-height:160px;
+            overflow: hidden;
+
+            h2.tribe-events-list-event-title {
+                white-space: normal;
+            }
         }
 
         .wraper-bottom-right {
