--- a/src/scss/media.scss
+++ b/src/scss/media.scss
@@ -36,6 +36,15 @@ $screen-xs-max:              ($screen-xs - 1) !default;
             padding-bottom: 20px !important;
         }
     }
+
+    .tribe-events-list .event-list-wrapper-bottom .wraper-bottom-left {
+        max-height:180px;
+        height: 180px;
+    }
+
+    .tribe-events-list .event-list-wrapper-bottom .wraper-bottom-right {
+        top:180px;
+    }
 }
 
 @media (min-width: $screen-xs) {
