--- a/src/scss/custom-style.scss
+++ b/src/scss/custom-style.scss
@@ -314,6 +314,13 @@ table.tribe-events-tickets {
 }
 
 .blog-list .post-inner .post-summary:after {
-    bottom:5px;
+    display: none;
+}
+
+.home-recent-posts .recent-post-title {
+    font-size: 20px;
+    line-height: 22px;
+    color: #333;
 }
 @import "media";
+
